--- a/public/product-fullwidth.html
+++ b/public/product-fullwidth.html
@@ -7,7 +7,7 @@
         <title>Hosoren &middot; Product</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
+        <link rel="shortcut icon" href="./img/logo-dark.png" type="image/x-icon" />
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Montserrat:400,700">
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,700,400italic,700italic&amp;subset=latin,vietnamese">
 
